# film-catalog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: hello-actions.yml  python-checks.yml
film-catalog/: .coveragerc  .env.template  app_lifespan.py  config.default.yaml  main.py  stuff.py
film-catalog/api/: __init__.py  main_views.py
film-catalog/api/api_v1/: __init__.py
film-catalog/api/api_v1/auth/services/: __init__.py  redis_token_helper.py  redis_users_helper.py  tokens_helper.py
film-catalog/api/api_v1/films/: crud.py  dependencies.py  redis.py  views.py
film-catalog/api/api_v1/films/views/: __init__.py  details_views.py  list_views.py
film-catalog/commands/: __init__.py  cli.py  simple_program.py  tokens.py
film-catalog/core/: config.py
film-catalog/dependencies/: auth.py  films.py
film-catalog/rest/: __init__.py  main_views.py
film-catalog/rest/films/: __init__.py  create_views.py  delete_views.py  list_views.py  update_views.py
film-catalog/schemas/: film.py
film-catalog/services/auth/: __init__.py  redis_token_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
film-catalog/services/films/: __init__.py  form_response_helper.py
film-catalog/storage/films/: __init__.py  crud.py  exceptions.py
film-catalog/templates/: about.html  base.html  home.html
film-catalog/templates/components/: back-to-list.html  navbar.html
film-catalog/templates/films/: create.html  list.html  update.html
film-catalog/templates/films/macro/: form.html
film-catalog/templates/macro/: form_fields.html
film-catalog/templating/: jinja_templates.py
film-catalog/testing/: conftest.py
film-catalog/testing/test_api/: test_main_views.py
film-catalog/testing/test_api/test_api_v1/: test_main_views.py
film-catalog/testing/test_api/test_api_v1/films/: test_crud.py  test_dependencies.py
film-catalog/testing/test_api/test_api_v1/films/test_views/test_details_views/: test_delete.py  test_transfer.py  test_update.py  test_update_partial.py
film-catalog/testing/test_api/test_api_v1/films/test_views/test_list_views/: test_create.py
film-catalog/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_token_helper.py
film-catalog/testing/test_schemas/: test_film.py  test_user.py
film-catalog/utils/: flash_messages.py
