[project]
name = "fastapiproject-film-catalog"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "art>=6.5",
    "fastapi[standard]>=0.115.12",
    "mypy>=1.16.1",
    "redis[hiredis]>=6.2.0",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[tool.ruff]
required-version = '>=0.12.1'
src = ['film-catalog']
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py313"
lint.fixable = ["ALL"]
lint.select = ["FAST", "ANN"]